--- a/chambres.html
+++ b/chambres.html
@@ -1601,7 +1601,7 @@
 		>
 			<!-- Footer Container -->
 			<div class="flex flex-col justify-between items-center space-y-6">
-				<img class="w-[150px]" src="../assets/logo.png" alt="logo" />
+				<img class="w-[150px] h-auto" src="../assets/logo.png" alt="logo" />
 				<!-- Info Container -->
 				<div class="flex flex-col justify-between space-y-3 text-center">
 					<span>5 rue de Bourgogne 67570 OSTWALD</span>
