--- a/chambres.html
+++ b/chambres.html
@@ -12,8 +12,8 @@
 			href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
 			rel="stylesheet"
 		/>
-		<link href="/dist/output.css" rel="stylesheet" />
-		<script src="script.js" defer></script>
+		<link href="./dist/output.css" rel="stylesheet" />
+		<script src="./script.js" defer></script>
 	</head>
 	<body>
 		<!-- Nav bar Container -->
