--- a/chambres.html
+++ b/chambres.html
@@ -51,7 +51,7 @@
 		<section class="container flex justify-center mx-auto mt-10 mb-4 max-w-7xl">
 			<div
 				class="w-[1180px] h-[480px] bg-contain bg-no-repeat bg-center"
-				style="background-image: url('/assets/suite-ruby.JPG')"
+				style="background-image: url('./assets/suite-ruby.JPG')"
 			></div>
 		</section>
 		<!-- Feature Section -->
@@ -136,7 +136,7 @@
 									<div
 										class="w-[540px] h-[350px] bg-center bg-no-repeat bg-cover relative"
 										style="
-											background-image: url('../assets/adheesha-paranagama-kOYh8C_xLUQ-unsplash.jpg');
+											background-image: url('./assets/adheesha-paranagama-kOYh8C_xLUQ-unsplash.jpg');
 										"
 									></div>
 
@@ -628,7 +628,7 @@
 									<div
 										class="w-[540px] h-[350px] bg-center bg-no-repeat bg-cover relative"
 										style="
-											background-image: url('../assets/adheesha-paranagama-kOYh8C_xLUQ-unsplash.jpg');
+											background-image: url('./assets/adheesha-paranagama-kOYh8C_xLUQ-unsplash.jpg');
 										"
 									></div>
 
@@ -1118,7 +1118,7 @@
 									<div
 										class="w-[540px] h-[350px] bg-center bg-no-repeat bg-cover relative"
 										style="
-											background-image: url('../assets/adheesha-paranagama-kOYh8C_xLUQ-unsplash.jpg');
+											background-image: url('./assets/adheesha-paranagama-kOYh8C_xLUQ-unsplash.jpg');
 										"
 									></div>
 
