--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							<div class="flex justify-between items-center">
 								<div
 									class="image-container w-[540px] h-[350px] bg-center bg-no-repeat bg-cover relative"
-									style="background-image: url('../assets/pool-night.jpeg')"
+									style="background-image: url('./assets/pool-night.jpeg')"
 								></div>
 
 								<div
@@ -556,7 +556,7 @@
 								<div
 									class="image-container w-[540px] h-[350px] bg-center bg-no-repeat bg-cover relative"
 									style="
-										background-image: url('/assets/sigmund-akfDvDi6Wt4-unsplash.jpg');
+										background-image: url('./assets/sigmund-akfDvDi6Wt4-unsplash.jpg');
 									"
 								></div>
 
@@ -677,7 +677,7 @@
 								<div
 									class="w-[540px] h-[350px] bg-center bg-no-repeat bg-cover relative"
 									style="
-										background-image: url('/assets/microsoft-edge-1N49Cn7P0Fg-unsplash.jpg');
+										background-image: url('./assets/microsoft-edge-1N49Cn7P0Fg-unsplash.jpg');
 									"
 								></div>
 
@@ -782,7 +782,7 @@
 								<div
 									class="w-[540px] h-[350px] bg-center bg-no-repeat bg-cover relative"
 									style="
-										background-image: url('/assets/vincent-nicolas-cZre_lSd2YU-unsplash.jpg');
+										background-image: url('./assets/vincent-nicolas-cZre_lSd2YU-unsplash.jpg');
 									"
 								></div>
 
@@ -1039,21 +1039,21 @@
 				<div
 					class="suite-image absolute top-0 left-0 w-[1050px] h-full bg-cover bg-no-repeat bg-center z-20"
 					style="
-						background-image: url('../assets/mark-champs-Id2IIl1jOB0-unsplash.jpg');
+						background-image: url('./assets/mark-champs-Id2IIl1jOB0-unsplash.jpg');
 					"
 				></div>
 				<!-- Image 2 container -->
 				<div
 					class="suite-image absolute top-0 left-[230px] w-[1050px] h-full bg-cover bg-no-repeat bg-center z-10"
 					style="
-						background-image: url('../assets/francesca-tosolini-w1RE0lBbREo-unsplash.jpg');
+						background-image: url('./assets/francesca-tosolini-w1RE0lBbREo-unsplash.jpg');
 					"
 				></div>
 				<!-- Image 3 container -->
 				<div
 					class="suite-image absolute top-0 left-[460px] w-[1050px] h-full bg-cover bg-no-repeat bg-center z-0"
 					style="
-						background-image: url('../assets/sidekix-media-8qNuR1lIv_k-unsplash.jpg');
+						background-image: url('./assets/sidekix-media-8qNuR1lIv_k-unsplash.jpg');
 					"
 				></div>
 			</div>
