--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Logo & Features Container -->
 				<div class="flex justify-start items-center space-x-5">
 					<div class="w-20">
-						<img src="../assets/logo.png" alt="" id="logo" />
+						<img src="./assets/logo.png" alt="" id="logo" />
 					</div>
 
 					<div
@@ -1080,7 +1080,7 @@
 		>
 			<!-- Footer Container -->
 			<div class="flex flex-col justify-between items-center space-y-6">
-				<img class="w-[150px] h-auto" src="../assets/logo.png" alt="logo" />
+				<img class="w-[150px] h-auto" src="./assets/logo.png" alt="logo" />
 				<!-- Info Container -->
 				<div class="flex flex-col justify-between space-y-3 text-center">
 					<span>5 rue de Bourgogne 67570 OSTWALD</span>
