--- a/chambres.html
+++ b/chambres.html
@@ -21,17 +21,17 @@
 			<!-- Nav bar -->
 			<nav class="flex justify-between items-center space-x-8">
 				<!-- Logo & Features Container -->
-				<div class="flex justify-start space-x-5">
+				<div class="flex justify-start items-center space-x-5">
 					<div class="w-20">
 						<img src="./assets/logo.png" alt="" id="logo" />
 					</div>
 
 					<div
-						class="font-serif text-lg uppercase text-secondary pr-4 border-r-2 border-secondary h-auto"
+						class="font-serif text-lg uppercase text-main pr-4 border-r-2 border-secondary h-7"
 					>
 						<a href="index.html">La maison</a>
 					</div>
-					<div class="font-serif text-lg uppercase text-main">
+					<div class="font-serif text-lg uppercase text-secondary">
 						<a href="chambres.html">les suites</a>
 					</div>
 				</div>
