--- a/suites.html
+++ b/suites.html
@@ -132,6 +132,13 @@
 				</div>
 			</div>
 		</section>
+		<!-- Image Section -->
+		<section class="container flex justify-center mx-auto mt-10 mb-4 max-w-7xl">
+			<div
+				class="hero-suite-image w-[1180px] h-[580px] bg-contain bg-no-repeat bg-center"
+				style="background-image: url('./assets/suite-bamboo-4.png')"
+			></div>
+		</section>
 		<!-- Feature Section -->
 		<section
 			id="features"
@@ -189,7 +196,7 @@
 							<div
 								class="flex flex-col space-y-8 w-11/12 mx-4 md:w-[43%] md:mx-0"
 							>
-								<h2 class="font-serif text-4xl uppercase">Chambre bambou</h2>
+								<h2 class="font-serif text-4xl uppercase">Suite bambou</h2>
 								<p class="font-body italic">
 									Sa déco en Bambou lui confère une ambiance naturelle et
 									cocooning.
@@ -212,7 +219,7 @@
 									class="flex flex-col justify-between space-y-3 items-center md:flex-row md:space-y-0"
 								>
 									<div
-										class="image-container w-full h-[200px] md:w-[540px] md:h-[350px] bg-center bg-no-repeat bg-cover relative"
+										class="suite-image-container w-full h-[200px] md:w-[540px] md:h-[350px] bg-center bg-no-repeat bg-cover relative"
 										style="background-image: url('./assets/bamboo1.jpg')"
 									></div>
 
@@ -755,7 +762,7 @@
 									class="flex flex-col justify-between space-y-3 items-center md:flex-row md:space-y-0"
 								>
 									<div
-										class="image-container w-full h-[200px] md:w-[540px] md:h-[350px] bg-center bg-no-repeat bg-cover relative"
+										class="suite-image-container w-full h-[200px] md:w-[540px] md:h-[350px] bg-center bg-no-repeat bg-cover relative"
 										style="background-image: url('./assets/ruby1.jpg')"
 									></div>
 
@@ -1356,7 +1363,7 @@
 									class="flex flex-col justify-between space-y-3 items-center md:flex-row md:space-y-0"
 								>
 									<div
-										class="image-container w-full h-[200px] md:w-[540px] md:h-[350px] bg-center bg-no-repeat bg-cover relative"
+										class="suite-image-container w-full h-[200px] md:w-[540px] md:h-[350px] bg-center bg-no-repeat bg-cover relative"
 										style="background-image: url('./assets/turquoise1.jpg')"
 									></div>
 
@@ -1933,7 +1940,7 @@
 				<img class="w-[150px] h-auto" src="./assets/logo.png" alt="logo" />
 				<!-- Info Container -->
 				<div class="flex flex-col justify-between space-y-3 text-center">
-					<span>5 rue de Bourgogne 67570 OSTWALD</span>
+					<span>7 rue de Bourgogne 67570 OSTWALD</span>
 					<span>+33 (0)7 50 20 91 76</span>
 				</div>
 				<!-- Socials Container -->
